# matching-engine

./: .gitignore  Cargo.toml  FRONTEND_SETUP.md  README.md  docker-compose.yml  start.sh
benches/: matching_engine_bench.rs
config/: default.toml  development.toml  production.toml
database/: README.md  connection.rs  schema.sql
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: DataSourceTest.vue  MyOrders.vue  OrderBook.vue  TradeHistory.vue  TradingPanel.vue  TradingView.vue
frontend/src/services/: DataSourceStrategy.js  MarketDataService.js  README.md
frontend/src/stores/: trading.js
frontend/src/views/: Home.vue
src/: api.rs  config.rs  lib.rs  logging.rs  main.rs  matching_engine.rs  monitoring.rs  orderbook.rs  simple_main.rs  types.rs  websocket.rs
